tests/test_data/CodeStructureSnippets/good/filip1.ifj21
require "ifj21"
function main()
    local x : integer 
    x = 5 + 9
    --write(x)
end
main()