tests/test_data/CodeStructureSnippets/bad/sem_err_3.7.ifj21
require "ifj21"
function foo()
  local x : integer = 3
  if true then
     local x : integer = x + 1
     write(x)
   end
end
foo()